[gd_scene load_steps=10 format=3 uid="uid://cas7icvmdsim1"]

[ext_resource type="Theme" uid="uid://cya286hi2pqfq" path="res://Game/Themes/Themes/theme_items.tres" id="1_2c0go"]
[ext_resource type="Script" path="res://Game/Scenes/Items/vision.gd" id="1_nr7kn"]
[ext_resource type="Texture2D" uid="uid://bxsnylrfwaq44" path="res://Game/Ressources/Vision/vision_base.png" id="3_17lfu"]
[ext_resource type="Texture2D" uid="uid://b4ott085engcg" path="res://Game/Ressources/Vision/vision_square.png" id="4_rc6tw"]
[ext_resource type="Texture2D" uid="uid://nbd1hvmsahuw" path="res://Game/Ressources/Vision/vision_radar.png" id="5_yjc8e"]
[ext_resource type="Script" path="res://Game/Scenes/Items/dp_visions.gd" id="7_82wdc"]
[ext_resource type="Script" path="res://Game/Scenes/Items/vision_buildpath.gd" id="8_vn5u4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wd4o5"]
bg_color = Color(0, 0, 0, 0.407843)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w0hp1"]
bg_color = Color(0.6, 0.6, 0.6, 0.356863)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="visions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_nr7kn")

[node name="items" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -175.0
offset_right = 350.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2

[node name="Kind" type="PanelContainer" parent="items"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wd4o5")

[node name="CenterContainer" type="CenterContainer" parent="items/Kind"]
layout_mode = 2

[node name="margin" type="MarginContainer" parent="items/Kind/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Main" type="VBoxContainer" parent="items/Kind/CenterContainer/margin"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="items/Kind/CenterContainer/margin/Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_w0hp1")

[node name="MarginContainer" type="MarginContainer" parent="items/Kind/CenterContainer/margin/Main/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="base_items_grid" type="GridContainer" parent="items/Kind/CenterContainer/margin/Main/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 5

[node name="MarginContainer" type="MarginContainer" parent="items/Kind/CenterContainer/margin/Main/PanelContainer/MarginContainer/base_items_grid"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_right = 50

[node name="general_item_panel" type="Panel" parent="items/Kind/CenterContainer/margin/Main/PanelContainer/MarginContainer/base_items_grid/MarginContainer"]
z_index = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_2c0go")

[node name="general_item" type="TextureRect" parent="items/Kind/CenterContainer/margin/Main/PanelContainer/MarginContainer/base_items_grid/MarginContainer/general_item_panel"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
texture = ExtResource("3_17lfu")
expand_mode = 1

[node name="number" type="Label" parent="items/Kind/CenterContainer/margin/Main/PanelContainer/MarginContainer/base_items_grid/MarginContainer/general_item_panel"]
layout_mode = 0
offset_left = 35.0
offset_top = 20.0
offset_right = 75.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "1"

[node name="Panel" type="Panel" parent="items/Kind/CenterContainer/margin/Main/PanelContainer/MarginContainer/base_items_grid"]
z_index = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_2c0go")

[node name="vision_blue" type="TextureButton" parent="items/Kind/CenterContainer/margin/Main/PanelContainer/MarginContainer/base_items_grid/Panel"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
texture_normal = ExtResource("4_rc6tw")
ignore_texture_size = true
stretch_mode = 0

[node name="number" type="Label" parent="items/Kind/CenterContainer/margin/Main/PanelContainer/MarginContainer/base_items_grid/Panel"]
layout_mode = 0
offset_left = 35.0
offset_top = 20.0
offset_right = 75.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "1"

[node name="Panel2" type="Panel" parent="items/Kind/CenterContainer/margin/Main/PanelContainer/MarginContainer/base_items_grid"]
z_index = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_2c0go")

[node name="vision_red" type="TextureButton" parent="items/Kind/CenterContainer/margin/Main/PanelContainer/MarginContainer/base_items_grid/Panel2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
texture_normal = ExtResource("5_yjc8e")
ignore_texture_size = true
stretch_mode = 0

[node name="number" type="Label" parent="items/Kind/CenterContainer/margin/Main/PanelContainer/MarginContainer/base_items_grid/Panel2"]
layout_mode = 0
offset_left = 35.0
offset_top = 20.0
offset_right = 75.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "1"

[node name="ScrollContainer" type="ScrollContainer" parent="items/Kind/CenterContainer/margin/Main"]
custom_minimum_size = Vector2(500, 250)
layout_mode = 2

[node name="items" type="VBoxContainer" parent="items/Kind/CenterContainer/margin/Main/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="dp_items" type="Node2D" parent="items/Kind/CenterContainer/margin/Main/ScrollContainer/items"]
script = ExtResource("7_82wdc")

[node name="item_buildpath" type="GridContainer" parent="items/Kind/CenterContainer/margin/Main/ScrollContainer/items"]
custom_minimum_size = Vector2(500, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
columns = 5
script = ExtResource("8_vn5u4")

[node name="Panel" type="Panel" parent="items/Kind/CenterContainer/margin/Main/ScrollContainer/items/item_buildpath"]
z_index = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_2c0go")

[node name="sub_item" type="TextureRect" parent="items/Kind/CenterContainer/margin/Main/ScrollContainer/items/item_buildpath/Panel"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
texture = ExtResource("4_rc6tw")
expand_mode = 1

[node name="Panel2" type="Panel" parent="items/Kind/CenterContainer/margin/Main/ScrollContainer/items/item_buildpath"]
z_index = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_2c0go")

[node name="sub_item" type="TextureRect" parent="items/Kind/CenterContainer/margin/Main/ScrollContainer/items/item_buildpath/Panel2"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
expand_mode = 1

[node name="Panel3" type="Panel" parent="items/Kind/CenterContainer/margin/Main/ScrollContainer/items/item_buildpath"]
z_index = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_2c0go")

[node name="sub_item" type="TextureRect" parent="items/Kind/CenterContainer/margin/Main/ScrollContainer/items/item_buildpath/Panel3"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
expand_mode = 1

[node name="margin" type="MarginContainer" parent="items/Kind/CenterContainer/margin/Main/ScrollContainer/items/item_buildpath"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 0

[node name="panel" type="Panel" parent="items/Kind/CenterContainer/margin/Main/ScrollContainer/items/item_buildpath/margin"]
z_index = 1
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = ExtResource("1_2c0go")

[node name="item_actif" type="TextureButton" parent="items/Kind/CenterContainer/margin/Main/ScrollContainer/items/item_buildpath/margin/panel"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 45.0
offset_bottom = 45.0
texture_normal = ExtResource("4_rc6tw")
ignore_texture_size = true
stretch_mode = 0
